change little bit

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="ritik" description="ritik dwivedi personal website">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ritik Dwivedi</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -21,7 +23,6 @@
     <label>
         Twitter: <a href="https://www.twitter.com/ahm_ritik" target="_blank">ahm_ritik</a>
     </label>
-
 </body>
 
 </html>
