--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <h1>Take your Freedom</h1>
+    <br>
     <label>
         Github: <a href="https://www.github.com/dwivedi-ritik" target="_blank">dwivedi-ritik</a>
     </label>
@@ -22,6 +23,11 @@
     <br>
     <label>
         Twitter: <a href="https://www.twitter.com/ahm_ritik" target="_blank">ahm_ritik</a>
+    </label>
+    <br>
+    <label>
+        My Resume: <a href="https://drive.google.com/file/d/1YzWvb1xvqFSG8TVplnQHrBfmNbXOL48_/view?usp=sharing"
+            target="_blank">resume</a>
     </label>
 </body>
 
