--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     </label>
     <br>
     <label>
-        My Resume: <a href="https://drive.google.com/file/d/1YzWvb1xvqFSG8TVplnQHrBfmNbXOL48_/view?usp=sharing"
-            target="_blank">resume</a>
+        My Resume: <a href="https://drive.google.com/file/d/17JLcRPgpxNcJlwXfvvc-3qalDOYtFaEa/view?usp=sharing" target="_blank">resume</a>
     </label>
 </body>
 
