--- a/index.html
+++ b/index.html
@@ -11,8 +11,34 @@
 </head>
 
 <body>
-    <h1>Take your Freedom</h1>
-    <br>
+    <div class="heading">
+        <h1>I'am <span class="header">Ritik Dwivedi </span></h1>
+        <p class="subheading">I'm a Linux guy and a Developer with good Development Skills but average problem solving
+            skill.
+        </p>
+        <p class="subheading">btw i don't use arch</p>
+    </div>
+
+    <div class="projects">
+        <p>Project</p>
+        <ul>
+            <div class="proj">
+
+            </div>
+            <div class="proj">
+
+            </div>
+            <div class=proj">
+
+            </div>
+            <div class="proj">
+
+            </div>
+        </ul>
+
+    </div>
+
+
     <label>
         Github: <a href="https://www.github.com/dwivedi-ritik" target="_blank">dwivedi-ritik</a>
     </label>
@@ -26,7 +52,8 @@
     </label>
     <br>
     <label>
-        My Resume: <a href="https://drive.google.com/file/d/1nFN9kuEdL9dW98KBTxWP8325pcIz8dSs/view?usp=sharing" target="_blank">resume</a>
+        My Resume: <a href="https://drive.google.com/file/d/1nFN9kuEdL9dW98KBTxWP8325pcIz8dSs/view?usp=sharing"
+            target="_blank">resume</a>
     </label>
 </body>
 
