--- a/index.html
+++ b/index.html
@@ -20,41 +20,75 @@
     </div>
 
     <div class="projects">
-        <p>Project</p>
-        <ul>
-            <div class="proj">
-
+        <h2>Projects</h2>
+        <div class="proj">
+            <div class="proj-content">
+                <h4 class="proj-heading">Gitfetch</h4>
+                <p class="proj-desc">
+                    A Fetch tool for getting github user info with the ascii art of their profile picture.
+                </p>
             </div>
-            <div class="proj">
-
+        </div>
+        <div class="proj">
+            <div class="proj-content">
+                <h4 class="proj-heading">Facial Recognition Web Application for Attedence</h4>
+                <p class="proj-desc">
+                    A Facial Recognition Web app that can recognize student face and take Attedence.
+                </p>
             </div>
-            <div class=proj">
-
+        </div>
+        <div class="proj">
+            <div class="proj-content">
+                <h4 class="proj-heading">Covid Vaccination Tracker</h4>
+                <p class="proj-desc">
+                    A Vue app that can search for the Vaccination data across the India.
+                </p>
             </div>
-            <div class="proj">
-
+        </div>
+        <div class="proj">
+            <div class="proj-content">
+                <h4 class="proj-heading">File Host</h4>
+                <p class="proj-desc">
+                    A Lightweight Web Server built with Golang for file sharing and hosting.
+                </p>
             </div>
-        </ul>
-
+        </div>
     </div>
 
+    <div class="connect">
+        <h2>Connect with me</h2>
 
-    <label>
-        Github: <a href="https://www.github.com/dwivedi-ritik" target="_blank">dwivedi-ritik</a>
-    </label>
-    <br>
-    <label>
-        Linked In: <a href="https://www.linkedin.com/in/ritik-dwivedi-7899581b2" target="_blank">ritik dwivedi</a>
-    </label>
-    <br>
-    <label>
-        Twitter: <a href="https://www.twitter.com/ahm_ritik" target="_blank">ahm_ritik</a>
-    </label>
-    <br>
-    <label>
-        My Resume: <a href="https://drive.google.com/file/d/1nFN9kuEdL9dW98KBTxWP8325pcIz8dSs/view?usp=sharing"
-            target="_blank">resume</a>
-    </label>
+        <div class="con-1">
+            <label>
+                Github:
+            </label>
+            <a href="https://www.github.com/dwivedi-ritik" target="_blank">dwivedi-ritik</a>
+        </div>
+        <div class="con">
+            <label>
+                Linked In:
+            </label>
+            <a href="https://www.linkedin.com/in/ritik-dwivedi-7899581b2" target="_blank">ritik dwivedi</a>
+        </div>
+        <div class="con">
+            <label>
+                Twitter:
+            </label>
+            <a href="https://www.twitter.com/ahm_ritik" target="_blank">ahm_ritik</a>
+        </div>
+        <div class="con">
+            <label>
+                My Resume:
+            </label>
+            <a href="https://drive.google.com/file/d/1nFN9kuEdL9dW98KBTxWP8325pcIz8dSs/view?usp=sharing"
+                target="_blank">resume</a>
+        </div>
+
+
+
+
+
+    </div>
 </body>
 
 </html>
