--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+    <nav>
+        <h2>
+            ritik
+        </h2>
+        <div class="navs">
+            <a href="">Home</a>
+            <a href="">Articles</a>
+            <a href="">Projects</a>
+            <a href="">About</a>
+        </div>
+    </nav>
     <div class="heading">
         <h1>I'am <span class="header">Ritik Dwivedi </span></h1>
         <p class="subheading">I'm a Linux guy and a Developer with good Development Skills but average problem solving
