--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div class="upperline"></div>
     <nav>
         <h2>
             ritik
@@ -26,8 +27,9 @@
         <h1>I'am <span class="header">Ritik Dwivedi </span></h1>
         <p class="subheading">I'm a Linux guy and a Developer with good Development Skills but average problem solving
             skill.
+            <br />
+            btw i don't use Arch.
         </p>
-        <p class="subheading">btw i don't use arch</p>
     </div>
 
     <div class="projects">
@@ -42,7 +44,7 @@
         </div>
         <div class="proj">
             <div class="proj-content">
-                <h4 class="proj-heading">Facial Recognition Web Application for Attedence</h4>
+                <h4 class="proj-heading">Attedance using Facial Recognition</h4>
                 <p class="proj-desc">
                     A Facial Recognition Web app that can recognize student face and take Attedence.
                 </p>
