--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="navs">
             <a href="">Home</a>
             <a href="">Articles</a>
-            <a href="">Projects</a>
-            <a href="">About</a>
+            <a href="#project">Projects</a>
+            <a href="#about">About</a>
         </div>
     </nav>
     <div class="heading">
@@ -38,7 +38,7 @@
         </p>
     </div>
 
-    <div class="projects">
+    <div class="projects" id="project">
         <h2>Projects</h2>
         <div class="proj">
             <div class="proj-content">
@@ -46,6 +46,13 @@
                 <p class="proj-desc">
                     A Fetch tool for getting github user info with the ascii art of their profile picture.
                 </p>
+                <div class="link-tech">
+                    <a href="" class="demo">Live Demo</a>
+                    <div class="tech-stack">
+                        <img src="./tech-svg/python.svg" width="18px">
+                        <img src="./tech-svg/gnubash.svg" width="18px">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="proj">
@@ -54,6 +61,16 @@
                 <p class="proj-desc">
                     A Facial Recognition Web app that can recognize student face and take Attedence.
                 </p>
+                <div class="link-tech">
+                    <a href="" class="demo">Live Demo</a>
+                    <div class="tech-stack">
+                        <img src="./tech-svg/python.svg" width="18px">
+                        <img src="./tech-svg/flask.svg" width="18px">
+                        <img src="./tech-svg/sqlite.svg" width="18px">
+                        <img src="./tech-svg/html5.svg" width="18px">
+                        <img src="./tech-svg/css3.svg" width="18px">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="proj">
@@ -62,6 +79,15 @@
                 <p class="proj-desc">
                     A Vue app that can search for the Vaccination data across the India.
                 </p>
+                <div class="link-tech">
+                    <a href="" class="demo">Live Demo</a>
+                    <div class="tech-stack">
+                        <img src="./tech-svg/javascript.svg" width="18px">
+                        <img src="./tech-svg/vuedotjs.svg" width="18px">
+                        <img src="./tech-svg/html5.svg" width="18px">
+                        <img src="./tech-svg/css3.svg" width="18px">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="proj">
@@ -70,10 +96,17 @@
                 <p class="proj-desc">
                     A Lightweight Web Server built with Golang for file sharing and hosting.
                 </p>
+                <div class="link-tech">
+                    <a href="" class="demo">Live Demo</a>
+                    <div class="tech-stack">
+                        <img src="./tech-svg/go.svg" width="18px">
+                        <img src="./tech-svg/sqlite.svg" width="18px">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <footer>
+    <footer id="about">
         <div class="connect">
             <h2>Connect with me</h2>
             <div class="footer-content">
