--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     A Fetch tool for getting github user info with the ascii art of their profile picture.
                 </p>
                 <div class="link-tech">
-                    <a href="" class="demo">Live Demo</a>
+                    <a href="https://github.com/dwivedi-ritik/gitfetch" class="demo">Live Demo</a>
                     <div class="tech-stack">
                         <img src="./tech-svg/python.svg" width="18px">
                         <img src="./tech-svg/gnubash.svg" width="18px">
@@ -62,7 +62,7 @@
                     A Facial Recognition Web app that can recognize student face and take Attedence.
                 </p>
                 <div class="link-tech">
-                    <a href="" class="demo">Live Demo</a>
+                    <a href="https://github.com/dwivedi-ritik/fr-webapp" class="demo">Live Demo</a>
                     <div class="tech-stack">
                         <img src="./tech-svg/python.svg" width="18px">
                         <img src="./tech-svg/flask.svg" width="18px">
@@ -80,7 +80,7 @@
                     A Vue app that can search for the Vaccination data across the India.
                 </p>
                 <div class="link-tech">
-                    <a href="" class="demo">Live Demo</a>
+                    <a href="https://cowin-help.netlify.app" class="demo">Live Demo</a>
                     <div class="tech-stack">
                         <img src="./tech-svg/javascript.svg" width="18px">
                         <img src="./tech-svg/vuedotjs.svg" width="18px">
@@ -97,7 +97,7 @@
                     A Lightweight Web Server built with Golang for file sharing and hosting.
                 </p>
                 <div class="link-tech">
-                    <a href="" class="demo">Live Demo</a>
+                    <a href="https://github.com/dwivedi-ritik/file-hoster" class="demo">Live Demo</a>
                     <div class="tech-stack">
                         <img src="./tech-svg/go.svg" width="18px">
                         <img src="./tech-svg/sqlite.svg" width="18px">
