--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </div>
     </nav>
     <div class="heading">
-        <h1>I'am <span class="header">Ritik Dwivedi </span></h1>
-        <p class="subheading">I'm a Linux guy and a Developer with good Development Skills but average problem solving
-            skill.
+        <h1>Its <span class="header">Ritik Dwivedi </span></h1>
+        <p class="subheading">I'm a Tech enthusiast guy and Full Stack Developer who love to do Web Development and some
+            leetcodes.
             <br />
             btw i don't use Arch.
         </p>
