--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     programs are made up of statements, and statements have slots for expressions. In this blog post,
                     we'll dig into how these two structures work, and see how building an intuition about this can help
                     us solve practical problems.</p>
-
+                <p class="read-more">Read more</p>
             </div>
         </div>
     </div>
