--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="navs">
             <a href="">Home</a>
-            <a href="">Articles</a>
+            <a href="#article">Articles</a>
             <a href="#project">Projects</a>
             <a href="#about">About</a>
         </div>
@@ -37,7 +37,20 @@
             btw i don't use Arch.
         </p>
     </div>
-
+    <div class="article-section" id="article">
+        <h2>Articles</h2>
+        <div class="articles">
+            <div class="article">
+                <p class="article-title">Github workflow with SSH</p>
+                <p class="article-desc">As you already know that Github has removed the password authentication support
+                    on August 13 2021. They have forced their user to use Personal Access Token instead of password..
+                </p>
+                <a class="read-more demo"
+                    href="https://dev.to/ritik_20/setting-up-your-github-workflow-with-ssh-hf8">Read
+                    more</a>
+            </div>
+        </div>
+    </div>
     <div class="projects" id="project">
         <h2>Projects</h2>
         <div class="proj">
@@ -106,19 +119,7 @@
             </div>
         </div>
     </div>
-    <div class="article-section">
-        <h2>Articles</h2>
-        <div class="articles">
-            <div class="article">
-                <p class="article-title">Statements Vs. Expressions</p>
-                <p class="article-desc">One of the most foundational things to understand about JavaScript is that
-                    programs are made up of statements, and statements have slots for expressions. In this blog post,
-                    we'll dig into how these two structures work, and see how building an intuition about this can help
-                    us solve practical problems.</p>
-                <p class="read-more">Read more</p>
-            </div>
-        </div>
-    </div>
+
     <footer id="about">
         <div class="connect">
             <h2>Connect with me</h2>
