--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ritik Dwivedi</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/png" href="./tech-svg/radar.svg">
 </head>
 
 <body>
@@ -138,7 +139,7 @@
             <h2>Connect with me</h2>
             <div class="footer-content">
                 <a class="resume"
-                    href="https://drive.google.com/file/d/1nFN9kuEdL9dW98KBTxWP8325pcIz8dSs/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1TCXhxKCr0SHSVFVejPsEqQ_L0xyB78xO/view?usp=sharing"
                     target="_blank">resume</a>
 
                 <div class="other-links">
