--- a/index.html
+++ b/index.html
@@ -133,6 +133,54 @@
             </div>
         </div>
     </div>
+    <div class="skill-section">
+        <h2>Skills</h2>
+        <div class="skills">
+            <div class="skill">
+                <img src="./tech-svg/python.svg" class="skill-img" alt="python" width="24px">
+                <div class="skill-info">
+                    <p class="skill-title">Python</p>
+                    <p class="skill-desc">Primary language. Mainly used for Web Dev and Scripting.
+                    </p>
+                </div>
+            </div>
+            <div class="skill">
+                <img src="./tech-svg/go.svg" class="skill-img" alt="python" width="24px">
+                <div class="skill-info">
+                    <p class="skill-title">Golang</p>
+                    <p class="skill-desc">Learning this language till now really liked it.</p>
+                </div>
+            </div>
+            <div class="skill">
+                <img src="./tech-svg/javascript.svg" class="skill-img" alt="python" width="24px">
+                <div class="skill-info">
+                    <p class="skill-title">Javascript</p>
+                    <p class="skill-desc">Love to work in javascript. I use it as my secondary language.</p>
+                </div>
+            </div>
+            <div class="skill">
+                <img src="./tech-svg/gnubash.svg" alt="python" width="24px">
+                <div class="skill-info">
+                    <p class="skill-title">Bash</p>
+                    <p class="skill-desc">Love bash to automate my day to day tasks.</p>
+                </div>
+            </div>
+            <div class="skill">
+                <img src="./tech-svg/vuedotjs.svg" class="skill-img" alt="python" width="24px">
+                <div class="skill-info">
+                    <p class="skill-title">Vue js</p>
+                    <p class="skill-desc">Really love to work in this beautiful frontend framework.</p>
+                </div>
+            </div>
+            <div class="skill">
+                <img src="./tech-svg/tailwindcss.svg" class="skill-img" alt="python" width="24px">
+                <div class="skill-info">
+                    <p class="skill-title">Tailwind css</p>
+                    <p class="skill-desc">I have been using Tailwind in my multiple projects.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer id="about">
         <div class="connect">
@@ -178,9 +226,6 @@
             </div>
             <p class="footer-notes">© 2022 Ritik Dwivedi. All rights reserved.</p>
     </footer>
-
-
-    </div>
 </body>
 
 </html>
