--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
             </div>
             <p class="footer-notes">© 2022 Ritik Dwivedi. All rights reserved.</p>
     </footer>
+    <div class="upperline"></div>
+
 </body>
 
 </html>
