--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="ritik" description="ritik dwivedi personal website">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.5">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Ritik Dwivedi Portfolio" content="Ritik Dwivedi personal Portfolio and website">
     <title>Ritik Dwivedi</title>
     <link rel="stylesheet" href="./style.css">
@@ -42,6 +42,7 @@
     </div>
     <div class="article-section" id="article">
         <h2>Articles</h2>
+        <div class="heading-styler"></div>
         <div class="articles">
             <div class="article-top">
                 <p class="article-title">Github workflow with SSH</p>
@@ -67,6 +68,8 @@
     </div>
     <div class="projects" id="project">
         <h2>Projects</h2>
+        <div class="heading-styler"></div>
+
         <div class="proj">
             <div class="proj-content">
                 <h4 class="proj-heading">Gitfetch</h4>
@@ -135,6 +138,8 @@
     </div>
     <div class="skill-section">
         <h2>Skills</h2>
+        <div class="heading-styler"></div>
+
         <div class="skills">
             <div class="skill">
                 <img src="./tech-svg/python.svg" class="skill-img" alt="python" width="24px">
@@ -184,7 +189,9 @@
 
     <footer id="about">
         <div class="connect">
+            <div class="heading-styler"></div>
             <h2>Connect with me</h2>
+
             <div class="footer-content">
                 <a class="resume"
                     href="https://drive.google.com/file/d/1TCXhxKCr0SHSVFVejPsEqQ_L0xyB78xO/view?usp=sharing"
