--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Ritik Dwivedi Portfolio" content="Ritik Dwivedi personal Portfolio and website">
-    <title>Ritik Dwivedi</title>
+    <title> Ritik Dwivedi</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="image/png" href="./tech-svg/radar.svg">
 </head>
@@ -72,37 +72,58 @@
 
         <div class="proj">
             <div class="proj-content">
-                <h4 class="proj-heading">Gitfetch</h4>
+                <h4 class="proj-heading">Hostel Gatepass Portal</h4>
                 <p class="proj-desc">
-                    A Fetch tool for getting github user info with the ascii art of their profile picture.
-                </p>
-                <div class="link-tech">
-                    <a href="https://github.com/dwivedi-ritik/gitfetch" class="demo">Live Demo</a>
-                    <div class="tech-stack">
-                        <img src="./tech-svg/python.svg" width="18px">
-                        <img src="./tech-svg/gnubash.svg" width="18px">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="proj">
-            <div class="proj-content">
-                <h4 class="proj-heading">Attedance using Facial Recognition</h4>
-                <p class="proj-desc">
-                    A Facial Recognition Web app that can recognize student face and take Attedence.
+                    A Web application made using Next JS for managing Gatepass and maintenances. Capable of
+                    sending push notification and email on each updates. Students even track their progress by token id
                 </p>
                 <div class="link-tech">
                     <a href="https://github.com/dwivedi-ritik/fr-webapp" class="demo">Live Demo</a>
                     <div class="tech-stack">
-                        <img src="./tech-svg/python.svg" width="18px">
-                        <img src="./tech-svg/flask.svg" width="18px">
-                        <img src="./tech-svg/sqlite.svg" width="18px">
-                        <img src="./tech-svg/html5.svg" width="18px">
-                        <img src="./tech-svg/css3.svg" width="18px">
+                        <img src="./tech-svg/nextdotjs.svg" width="18px">
+                        <img src="./tech-svg/mongodb.svg" width="18px">
+                        <img src="./tech-svg/javascript.svg" width="18px">
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="proj">
+            <div class="proj-content">
+                <h4 class="proj-heading">Attedance using Facial Recognition</h4>
+                <p class="proj-desc">
+                    A Web App written in Flask for Facial Recognition. This app only runs on the localhost server. It
+                    has user management and gives the attendance list after each attendance
+                </p>
+                <div class="link-tech">
+                    <a href="https://github.com/dwivedi-ritik/fr-webapp" class="demo">Live Demo</a>
+                    <div class="tech-stack">
+                        <img src="./tech-svg/flask.svg" width="18px">
+                        <img src="./tech-svg/sqlite.svg" width="18px">
+                        <img src="./tech-svg/python.svg" width="18px">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="proj">
+            <div class="proj-content">
+                <h4 class="proj-heading">Free Movie Downloader</h4>
+                <p class="proj-desc">
+                    A Front end web app that let you download free hollywood movies in high quality.
+                    This app usage YTS-MX API. Images and torrents are served as stream to front end
+                    application
+                </p>
+                <div class="link-tech">
+                    <a href="https://github.com/dwivedi-ritik/gitfetch" class="demo">Live Demo</a>
+                    <div class="tech-stack">
+                        <img src="./tech-svg/nextdotjs.svg" width="18px">
+                        <img src="./tech-svg/tailwindcss.svg" width="18px">
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="proj">
             <div class="proj-content">
                 <h4 class="proj-heading">Covid Vaccination Tracker</h4>
@@ -112,10 +133,8 @@
                 <div class="link-tech">
                     <a href="https://cowin-help.netlify.app" class="demo">Live Demo</a>
                     <div class="tech-stack">
-                        <img src="./tech-svg/javascript.svg" width="18px">
                         <img src="./tech-svg/vuedotjs.svg" width="18px">
-                        <img src="./tech-svg/html5.svg" width="18px">
-                        <img src="./tech-svg/css3.svg" width="18px">
+                        <img src="./tech-svg/javascript.svg" width="18px">
                     </div>
                 </div>
             </div>
@@ -185,8 +204,8 @@
                 </div>
             </div>
         </div>
-    </div>
 
+    </div>
     <footer id="about">
         <div class="connect">
             <div class="heading-styler"></div>
