--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <title> Ritik Dwivedi</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="image/png" href="./tech-svg/radar.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -37,8 +41,11 @@
             to do Web Development and some
             leetcodes.
             <br />
-            btw i don't use Arch.
         </p>
+        <button class="download-resume">
+            Download Resume
+        </button>
+
     </div>
     <div class="article-section" id="article">
         <h2>Articles</h2>
@@ -78,7 +85,7 @@
                     sending push notification and email on each updates. Students even track their progress by token id
                 </p>
                 <div class="link-tech">
-                    <a href="https://github.com/dwivedi-ritik/fr-webapp" class="demo">Live Demo</a>
+                    <a href="https://github.com/dwivedi-ritik/pass-portal" class="demo">Live Demo</a>
                     <div class="tech-stack">
                         <img src="./tech-svg/nextdotjs.svg" width="18px">
                         <img src="./tech-svg/mongodb.svg" width="18px">
@@ -115,7 +122,7 @@
                     application
                 </p>
                 <div class="link-tech">
-                    <a href="https://github.com/dwivedi-ritik/gitfetch" class="demo">Live Demo</a>
+                    <a href="https://github.com/dwivedi-ritik/yts" class="demo">Live Demo</a>
                     <div class="tech-stack">
                         <img src="./tech-svg/nextdotjs.svg" width="18px">
                         <img src="./tech-svg/tailwindcss.svg" width="18px">
