--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
             leetcodes.
             <br />
         </p>
-        <button class="download-resume">
+        <a class="download-resume" target="_blank"
+            href="https://drive.google.com/file/d/1TCXhxKCr0SHSVFVejPsEqQ_L0xyB78xO/view?usp=sharing">
             Download Resume
-        </button>
+        </a>
 
     </div>
     <div class="article-section" id="article">
