--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -214,6 +213,32 @@
         </div>
 
     </div>
+
+    <div class="acheivements">
+        <h2>Acheivements</h2>
+        <div class="heading-styler"></div>
+        <div class="acheivements-box">
+
+            <div class="acheivements-card">
+                <p class="acheivements-card-header">40+</p>
+                <p class="skill-title">Github Repository</p>
+                <p class="acheivements-card-desc">40+ public Github repository and still
+                    contributing in those projects</p>
+            </div>
+            <div class="acheivements-card">
+                <p class="acheivements-card-header">500+</p>
+                <p class="skill-title">Leetcode Problems</p>
+                <p class="acheivements-card-desc">Solved over 500 and more problems on multiple coding platform.</p>
+            </div>
+            <div class="acheivements-card">
+                <p class="acheivements-card-header">50+</p>
+                <p class="skill-title">Github Stars</p>
+                <p class="acheivements-card-desc">Got over 50+ github stars adding all of my repository stars.</p>
+            </div>
+        </div>
+
+    </div>
+
     <footer id="about">
         <div class="connect">
             <div class="heading-styler"></div>
