--- a/index.html
+++ b/index.html
@@ -77,6 +77,52 @@
         </div>
 
     </div>
+
+    <div class="experiences">
+        <h2>Experience</h2>
+        <div class="heading-styler"></div>
+        <div class="experience-timeline">
+
+            <div class="experience-box">
+                <div class="experience-card">
+                    <div class="experience-header">
+                        <div class="job-info">
+                            <p class="job-title">Developer Intern</p>
+                            <p class="company-name">Belzabar Software</p>
+                        </div>
+                        <p class="experience-date">Jan 23 - Jul 23 </p>
+                    </div>
+                    <div class="experience-desc">
+                    </div>
+                </div>
+                <div class="experience-card">
+                    <div class="experience-header">
+                        <div class="job-info">
+                            <p class="job-title">Computer Scientist</p>
+                            <p class="company-name">Belzabar Software</p>
+                        </div>
+                        <p class="experience-date">Jul 23 </p>
+                    </div>
+                    <div class="experience-desc">
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="verticle-line">
+                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="#fff"
+                    data-view-component="true" class="line-dot-1">
+                    <path d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z"></path>
+                </svg>
+                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="#fff"
+                    data-view-component="true" class="line-dot-2">
+                    <path d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z"></path>
+                </svg>
+            </div>
+        </div>
+
+    </div>
+
     <div class="projects" id="project">
         <h2>Projects</h2>
         <div class="heading-styler"></div>
@@ -166,6 +212,7 @@
             </div>
         </div>
     </div>
+
     <div class="skill-section">
         <h2>Skills</h2>
         <div class="heading-styler"></div>
@@ -242,6 +289,8 @@
         </div>
     </div>
 
+
+
     <footer id="about">
         <div class="connect">
             <div class="heading-styler"></div>
@@ -286,7 +335,7 @@
                     </div>
                 </div>
             </div>
-            <p class="footer-notes">© 2022 Ritik Dwivedi. All rights reserved.</p>
+            <p class="footer-notes"> © 2022 Ritik Dwivedi. All rights reserved.</p>
     </footer>
     <div class="upperline"></div>
 
